--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Shivraj Dange",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
