--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "CSV Upload and See the Data ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "node.js",
