added start cmd

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "CSV Upload and See the Data ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "node.js",
