--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "express-ejs-layouts": "^2.5.1",
     "fs": "^0.0.1-security",
     "mongoose": "^7.1.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "multer": "^1.4.5-lts.1"
   }
 }
